Lock screen rotation.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 
         </div>
     </div>
+    <script>
+        let screenOrientaton = scree.orientation.type
+        screen.orientation.lock(screenOrientaton)
+    </script>
 </body>
 
 </html>
