--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
         </div>
     </div>
     <script>
-        let screenOrientaton = scree.orientation.type
+        let screenOrientaton = screen.orientation.type
         screen.orientation.lock(screenOrientaton)
+        console.log(screenOrientaton)
     </script>
 </body>
 
