Minor style updates #1
-make everything bigger on bigger screens

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="profile-summary">
                 <div class="summary-section">
-                    <div class="summary-raw">
+                    <div class="summary-row">
                         <div class="summary-number">
                             80K
                         </div>
@@ -39,7 +39,7 @@
                             Followers
                         </div>
                     </div>
-                    <div class="summary-raw">
+                    <div class="summary-row">
                         <div class="summary-number">
                             803K
                         </div>
@@ -47,7 +47,7 @@
                             Likes
                         </div>
                     </div>
-                    <div class="summary-raw">
+                    <div class="summary-row">
                         <div class="summary-number">
                             1.4K
                         </div>
